January 2019 changes and additions.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -31,8 +31,11 @@
 Director, President\\
 \email{president@projectnorthstar.ca}}
 
-\address{Garry Dupont\\
+\address{Neil Raynor\\
 Director, Vice President}\\
+
+\address{Garry Dupont\\
+Director}\\
 
 \address{Roger Button\\
 Director, Corporate Secretary, NStar Chronicle Editor}\\
@@ -40,11 +43,10 @@ Director, Corporate Secretary, NStar Chronicle Editor}\\
 \address{Phil Chrysler\\
 Director, Merchandise}\\
 
-\address{Neil Raynor\\
-Director}\\
 
-\address{Bill Tate\\
-Director, Special Events}\\
+
+%\address{Bill Tate\\
+%Director, Special Events}\\
 %613-523-8817\\
 %\email{billtate@bell.net}}
 
@@ -119,25 +121,17 @@ P.O.Box 44005\\
 Ottawa, ON\\
 K1K 4P8}\\
 
-\address{Web site: {\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
+\address{Web site:
+{\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
 	General enquiries:\email{info@projectnorthstar.ca}}
 
-
-%\scriptsize\address{PNSAC\\
-%P.O.Box 44005\\
-%Ottawa, ON\\
-%K1K 4P8}\\
-%
-%\scriptsize\address{Web site: {\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
-%	General enquiries:\email{info@projectnorthstar.ca}}
+%\scriptsize\address{Web site:
+{\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
 
 
 
-%\begin{figure}
-%    \centering
-%    \mbox{\subfigure{ \href{http://www.facebook.com/PNSAC/}{\includegraphics[scale=0.1]{../images/facebook_128x128.pdf}}}\quad
-%    \subfigure{ \href{http://twitter.com/PnsacComms/}{\includegraphics[scale=0.1]{../images/twitter_128x128.pdf}}}}
-%\end{figure}
+
+
 
 
 
