--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -4,65 +4,124 @@
 
 % Head
 
-\title{Reunion of Giants}
+\title{Volunteers Assure a Bright Future for Classic Plane}
 %\subtitle{Part 4}
-\author{Bruce Grant}
+\author{Randall Denley}
 
 \maketitle
 
-% \textit{Photos courtesy of Library Archives Canada and 426 Thunderbird
-%  Sqn, RCAF.}\\
+\end{multicols}
 
-The "Reunion of Giants" video came to the Canadian Aviation and Space Museum's
-theatre on May 14th, courtesy of the Canadian Warplane Heritage Museum in
-Hamilton. CWHM sent along the pilot Captain Leon Evans (retired Air Canada), and
-Dave Rohrer, CEO, as well as Morgan Elliott the videographer. Also present were
-two World War Two decorated Lancaster pilots Don McKechnie and Bill Button. With
-almost a full house of 200 it was a very successful Project North Star public
-event.
-
-
-The outstanding feature of the story is the audacity of CWHM to fly Canada's
-only airworthy Lancaster to England for a reunion with the only other flying
-Lancaster in the world. The Lanc is the flagship of the CWHM, its biggest
-attraction and an irreplaceable historic artifact. In a typical year it flies
-only about fifty hours, attending aviation events in Canada and every move is
-calculated some years in advance.
+\begin{figure*}[htbp]
+	\vspace{2em}
+	\centering
+	%name of the graphic, without the path AND in EPS format:
+	\includegraphics[scale=0.8]{holmgren-timmin-scaled.png}
+	%caption of the figure 
+	\caption*{\small \em TIm Timmins, left, and Robert Holmgren are forming a
+group of skilled volunteers to restore a 55-year-old North Star, the first
+Canadian-made plane capable of transcontinental flight.}
+	%label of the figure, which has to correspond to \ref{}:
+	\label{fig:timmins-holmgren}
+\end{figure*}
 
 
-In England, the arrival over the North Atlantic route of our Lanc was embraced
-as a tribute to the quality of the machine and the courage of its crew. It
-reinforced the link with Canada which provided so much support to Great Britain
-during the war.
+\begin{multicols}{2}
 
+\textit{This article was published in the Ottawa Citizen on February 1, 2003
+under the byline of Randall Denley. It was brought to our attention recently by
+Drew Hodge. The article is republished with the express permission of the
+Ottawa Citizen, a division of Postmedia Network Inc. (ed.).
+}\\
 
-While on a final approach in England, the supercharger on engine \#3 went to
-pieces and the plane landed with a trail of smoke. A replacement engine would
-have to be found. The replacement that turned up was a Rolls Royce Merlin that
-would have to be substituted for the Packard Merlin in our Canadian-built
-Lancaster. This presented a challenge in sorting out the elements of QEC with
-incompatible Whitworth and SAE fasteners. The new engine would be a "bitsa"
-(bitsa this and bitsa that). They did it in about three days and got the plane
-back in the air.
+The world's last classic Canadair North Star sits, forlorn, on the tarmac at
+the Canada Aviation Museum. It's been parked there since 1966, along with half
+a dozen other orphans of the museum, planes that it has no money to restore and
+that are too big to bring inside the crowded building.
 
+The paint on the North Star is faded and peeling.Some gaps in the wings are
+closed with wire to keep out the birds that have made it home for years.The
+engines are protected with pieces of plywood. The interior requires a complete
+renovation.
 
-On the return flight, stronger than anticipated headwinds raised the risk of
-running out of gas over the Davis Strait. They diverted to Narsarsuaq in
-Greenland.
+It's a shame to see an important part of Canada's aviation history slide into
+this kind of ruin, Thanks to the efforts of two Ottawa men, however, the North
+Star finally has a bright future.
 
+Robert Holmgren and Tim Timmins are forming a group of skilled volunteers to
+restore the North Star. This kind of volunteer effort will be a first for the
+museum, says director general Anthony Smyth, who is supporting the effort,
+along with aviation companies including Air Canada and Boeing.
 
-Following the showing of the film there was a spirited question and answer
-session with CWHM's representatives moderately by Mike Pearson (retired Air
-Canada pilot of the Gimli glider fame). There is no doubt that all those in
-attendance enjoyed themselves thoroughly and gained some understanding of what
-it meant for those involved in this project.
+The museum is showing commendable flexibility because the traditional view in
+the museum world is that restoration is work that can only be done by trained
+experts. Unfortunately, the museum can't afford that kind of work, and that's
+one of the reasons the plane has been sitting there for more than 35 years.
 
+This is no small undertaking. The 55-year-old North Star 1-ST is a sizeable
+plane, nearly 30 metres long and with a wing span of 35 metres. Restoring it
+will be a yearlong process that would cost \$1 million if it were done by paid
+staff.
 
-At Project North Star, we have some appreciation idea of the scale of CWHM's
-accomplishment. As our members know we are in the twelfth year of our project to
-restore the last surviving North Star. But, we are restoring it only as a museum
-artifact, not an airworthy machine. The video is available for sale at
-www.warplane.com and the trailer can be viewed ath www.suddenlyseemore.com .
+The North Star is an important plane in Canada's aviation history, the first
+Canadian-,made plane capable of transcontinental flight. It's considered the
+plane that launched the postwar Canadian aviation industry; 70 of them were
+built. Brought into service after the Second World War, North Stars carried
+passengers for several airlines and troops for the Canadian military.  North
+Stars served to airlift Canadian troops to Korea and provided transportation
+for VIPs visiting Canada. The plane at the museum belonged to the RCAF.
+
+Holmgren is a retired Air Canada maintenance expert, and Timmins is a former
+RCAF navigator who flew on the North Stars. Timmins's former squadron had taken
+an interest in the North Star, and Holmgren, who was giving his time as a
+volunteer at the museum, pushed it forward.
+
+"We'd like to see it brought back to something like its former self," Holmgren
+says.
+
+A temporary structure, perhaps a bubble like the one over the playing field at
+Lansdowne Park, will be necessary before the restoration can begin. The plane
+is too large to fit inside the museum's existing building and also too big to
+be easily transported elsewhere.
+
+Holmgren and Timmins need about 200 volunteers to make the project a success.
+Holmgren has approached Air Canada, Bombardier and Boeing to get the help of
+past and present employees. About 40 volunteers have already come forward.
+
+The key need is skilled craftsmen with up-to-date large aircraft experience and
+who live in or near Ottawa.
+
+Some people who can come in almost every day to run the project are required. 
+There is also a demand for people to do record-keeping and research.
+
+The group is hoping to attract national attention for the project, both to
+provide volunteer expertise and to help raise money.  This is a plan to help a
+national museum, after all.  Smyth says the museum will be involved with a
+fundraising campaign, but it's early yet to say how much is required. It
+depends partly on how much time and material are donated by corporations. A
+full-time salaried project manager will be hired by the museum.
+
+The project will take a conservation approach, retaining as much of the
+original material as possible, Smyth says. The restored plane will be
+structurally complete and faithful to the original. Returning the plane to
+flyable condition is too expensive to be feasible and the museum wouldn't want
+to take a chance flying the last remaining version of such an important plane.
+
+Restoring the North Star is just the beginning of what Holmgren and his
+associates hope to accomplish. The museum has another half dozen planes outside
+that require restoration. Restoring them all will take nine or ten years. The
+Museum's new addition, which it hopes to have open by December of this year,
+will be large enough to finally bring the North Star indoors.
+
+%If you want to help with the project, contact Robert Holmgren at 748-5972 or
+%robertholmgren@rogers.com. The group also has a Web site,
+%www.projectnorthstar.ca.
+
+%\address{Web site:
+%{\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
+%	General enquiries:\email{info@projectnorthstar.ca}}
+%
+
 
 %\begin{quotation}
 %	\textit{You have to be careful opening up the panels covering the 
@@ -81,9 +140,6 @@ www.warplane.com and the trailer can be viewed ath www.suddenlyseemore.com .
 %	%label of the figure, which has to correspond to \ref{}:
 %	\label{fig:op-hawk-one.eps}
 %\end{figure*}
-
-
-%\textit{Reprinted from the March/April 2014 edition of "Legion Magazine," with the kind permission of Jennifer Morse, General Manager of Canvet Publications, and Tom MacGregor.}
 
 
 \begin{footnotesize}
