--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -5,7 +5,7 @@
 % Head
 
 \title{Our Members}
-\author{Interview with Austin J Timmins}
+\author{Interview with Ted Devey}
 
 \maketitle
 
@@ -24,39 +24,26 @@
 
 1.\textit{What is your background in aviation?}
 
-My aviation experience includes 36 years service in the RCAF and nine
-years with the Canadian Aeronautics and Space Institute. In the RCAF I
-completed radio navigator training, which included communications,
-navigation and air gunner. I later qualified as an airborne
-interception navigator. My operational experience includes air
-transport, search and rescue and training. My assignments included
-Navigation Leader, Aircrew Leader, Squadron Commander, Air Command
-Navigator and Deputy Commander (COO) of the Air Transport Group. I
-logged 9500 hours, mostly on the following aircraft: Beechcraft,
-Dakota, North Star, Mitchell, Yukon, Hercules, and Boeing 707. My
-staff assignments in Europe included movement control (traffic
-management) for 1 Air Division and a tour at The NATO Defense College
-in Rome. 
+My service background was naval. Professionally I was an electrical engineer
+with the Department of Communications specializing in radio spectrum
+engineering. After retirement in 1989 I sought activities that interested me
+such as helping to install a pipe organ in a theatre in Renfrew, working on
+restoring a sailing yacht, which unfortunately stopped due to lack of money. I
+also took courses in welding, machine shop and woodworking at Algonquin College
+to enhance my manual skills. 
 
-On retirement from the RCAF I participated in a Transport
-Canada A Base review of several airports. I then secured full
-employment with Canadian Aeronautics and Space Institute as Executive
-Director, retiring in 1995.
+2. \textit{How long have you been involved with Project North Star and how and
+why did you get involved?}
 
-2. \textit{How long have you been involved with Project North Star and how and why did you get involved?}
-
-My involvement with efforts to conserve North Star 17515 predates
-Project North Star. Ottawa area members of the 426 Thunderbird Squadron
-Association, mostly retired North Star aircrew, met with the National
-Aviation Museum staff to express their concern about the state of the
-North Star and proposed volunteer involvement in a preservation effort.
-These expressions of concern and interest led to a meeting between the
-Association representatives, where General Adamson presented a proposal
-for the restoration of the aircraft. It was rejected but assurance was
-given that the North Star would be first priority when the new hangar
-was completed Also a North Star Trust Fund would be established. Robert
-Holmgren, an observer at the meeting, then proceeded to develop a
-proposal for volunteers to restore the North Star.
+I attended a public meeting in the Museum in 2003 in which it was indicated
+that efforts were being made to restore the Museum's North Star to a showroom
+condition. In 2004 the project finally was approved and work started.
+Professional work had to be carried out to remove asbestos and many dead birds
+and their mess. At first I used my welding skills in adapting steps/platforms
+for working on engines on the aircraft. In winter, seats were removed from the
+cockpit and brought into the shop where they were dismantled, treated and
+cleaned, painted and finally spray painted. I found the work interesting and
+satisfying and so I was hooked into the project.
 
 %\begin{figure}[htbp]
 %   \vspace{2em}
@@ -71,11 +58,15 @@ proposal for volunteers to restore the North Star.
 
 3. \textit{What has been the history of your involvement to date?}
 
-I have been involved from the beginning of efforts to establish PNS,
-first as a member of a Steering Committee, led by Robert Holmgren,
-later, Vice President and then President of PNSAC. My contacts in
-aviation provided much needed advice and support, including access to
-initial funding for PNSAC.
+In 2006 I expressed interest in the work on the four Roll-Royce Merlin engines.
+As it turned out I was asked if I would take on the job of Merlin Crew Chief
+and agreed with the proviso that I would turn the task over if someone came
+along who was properly qualified. When Garry Dupont retired from the RCMP as
+head AME at the RCMP Hangar at Uplands, I offered the position to him which he
+took over. From 2006 until the summer 2018 I did only engine work on the four
+engines. Unfortunately my limited mobility prevented me from helping with the
+more recent work that was being done behind the firewall of \#4 engine. So I
+went into the Conservation shop to start doing different work.
 
 
 %\begin{figure}[htbp]
@@ -102,8 +93,26 @@ initial funding for PNSAC.
 
 4. \textit{What has been the highlight of your involvement?}
 
-The highlight of my involvement has to be the establishment of PNS and
-PNSAC.
+I think that the highlight of my involvement was back in 2006. To work on the
+engines we needed two engine stands, one to transfer the entire engine assembly
+from the aircraft for dismantling to the core engine and a second stand to
+mount the core engine and further dismantle it to bare components. This had to
+be a rotary affair so that the engine could be positioned for whatever
+operation was being done. The first stand had to be designed and built from
+scratch. The design was an adaptation of the engine stand located next to the
+Lancaster bomber on the Museum floor with ample room for a person to work
+underneath. A specification was drawn up for the various pieces of steel to be
+cut precisely by the steel supplier and to be delivered to the RCMP Hangar at
+Uplands, as instructed by Garry Dupont. On a Saturday a group of volunteers
+assembled at the RCMP Hangar and assembled the horizontal and vertical sections
+of the stand with Garry doing the welding. Following this the stand was
+delivered to the Museum's welding shop for final assembly, then into the main
+shop where it was finally assembled and painted. Everything fit as intended.
+
+The rotary stand was located in the storage area of the Science and Tech
+Museum. The base was extended to the required length and a new frame was built
+to hold the core engine. That everything fit together so well from the start
+was the highlight of the project for me.
 
 %\begin{figure}[htbp]
 %   \vspace{2em}
@@ -118,13 +127,23 @@ PNSAC.
 
 5. \textit{What has been the most challenging part of your involvement?}
 
-PNS is now in its 16th year. It has been a work in progress with many
-bumps along the way. I spent a lot of time and effort, along with other
-members of the Executive, evening out these bumps. Establishing and
-maintaining effective channels of communication with CASM and CSTM
-required constant attention. Much effort was directed to fund raising,
-publicity, and, finding volunteers. In the beginning, every date
-brought a new challenge.
+The most challenging part of the job was working on engine \#1, the port outer.
+Since I was not a mechanic, I had to plan the disassembly of the engine and
+carry it out with the help of crew members under the strict guidance of the
+then Shop Supervisor Mike Irvin. He was a hard taskmaster. This was not an
+engine that had just been removed from an operating aircraft for overhaul. The
+North Star and its engines had been left out in the Great Canadian outdoors for
+39 years without any attempt at protection from the four seasons of weather
+during those years. Corrosion was rampant. In each of the twelve cylinders the
+piston rings were rusted to the cylinder liners. Many hours of soaking the
+pistons with Liquid Wrench, the use of compressed air and other techniques had
+to be employed to remove the pistons from the cylinders. There were other
+issues too that made the overall disassembly of the engine very difficult. The
+foregoing applied to each of the other three engines, so it has taken about 12
+years to process the four Merlins to a preserved non-running condition. The
+first engine I found the most challenging as we had to learn as we went along.
+The remaining engines were very difficult but the experience gained with \#1
+engine was valuable in restoring the others.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
