--- a/pnsac/newsletter/article_Miscellany.tex
+++ b/pnsac/newsletter/article_Miscellany.tex
@@ -4,12 +4,52 @@
 
 % Head
 
-\title{Miscellany}
+\title{North Star wall and floor panel photographs}
 %% \author{Drew Hodge}
 
 \maketitle
 
-\end{multicols}
+%\end{multicols}
+
+Here are three photos of recent work on the wall and floor panels.  All the
+wall
+panels needed to be replaced.  We are able to save some of the floor panels,
+but not the one in front of the cargo door as it was so heavily
+damaged by cargo and exposure to the weather.  The fourth photo is the rotating
+beacon on the top of the fuselage.  It was removed for restoration and to stop
+a persistent leak.
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{OldWallandFloorPanel-scaled.png}
+   \caption*{\small \em Old wall and floor panel}
+   \label{fig:wall-one}
+\end{figure}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{LayingOutNewFloorPanel-scaled.png}
+   \caption*{\small \em Laying out new floor panel}
+   \label{fig:wall-two}
+\end{figure}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{NewWallPanelFitting-scaled.png}
+   \caption*{\small \em Fitting new wall panel.}
+   \label{fig:stab-one}
+\end{figure}
+
+\begin{figure}[httb]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{RotatingNavigationBeacon-scaled.png}
+   \caption*{\small \em Rotating Navigation Beacon.}
+   \label{fig:stab-one}
+\end{figure}
 
 %\begin{figure}[ht!]
 %   \vspace{2em}
@@ -22,11 +62,6 @@
 %   \label{fig:merchandise}
 %\end{figure}
 
-\begin{enumerate}
-	\item "The Canadian North Star." This book and others referencing the North Star is available through Canavbooks ({\normalfont\color{blue}\texttt{\href{http://www.canavbooks.com}{www.canavbooks.com}}}).
-	\item "Short on Silence" is an article on CASM's North Star, included in the February 2016 edition of the British publication {\normalfont\color{blue}\texttt{\href{http://www.flypast.com/}{Fly Past Magazine}}}.
-	\item Models. There are only two metal models of the North Star left, and it is not presently intended to re-order. The models are for sale at CASM's gift shop.
-\end{enumerate}
 
 
 
@@ -34,7 +69,7 @@
     \raggedleft PNSAC\\
 \end{footnotesize}
 
-\begin{multicols}{2}
+%\begin{multicols}{2}
 
 % End of text.
 
@@ -42,4 +77,3 @@
 %%% mode: latex
 %%% TeX-master: main_document.tex
 %%% End: 
-
