--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,57 +10,83 @@
 
 \maketitle
 
-Since the last issue of the NStar Chronicle in March of this year we
-have continued to reorganize our volunteer operations under the
-leadership of the Museum's Special Projects Manager, R\'{e}jean (Rej)
-Demers. We have started a recruitment process for new restoration
-volunteers and to date two new people have started work. During the
-summer two more permanent Museum staff joined Rej to replace people who
-have retired. It is obviously taking time for the new Museum staff to
-get to know the complex operations of the Aviation Museum, to get to
-know the Project North Star volunteers and assess their various talents
-and areas of expertise. Consequently, our summer has been quiet but
-steadily productive.
+It is always interesting to look back on what was written in previous issues of
+any journal. The NStar Chronicle is no exception and so before starting to
+write this piece I reread what I had said during the year 2018. For once luck
+was with me and as far as I can see I did not write anything that was either
+untrue or not achieved during the year.
 
-For several reasons it became necessary to reorganize the location of
-several major Museum artifacts. This affected the North Star aircraft
-which spent the summer outside the Reserve Hanger resulting in some
-problems with water ingress and further bird activity. I am pleased to
-say that the aircraft is now back inside the hangar.
+The last paragraph of my January 2018 Notes suggested that the year would see
+increased activity both in the aircraft restoration and within the Association.
+Both have proved correct. We have successfully recruited several new
+Restoration Volunteers and our Association activities have increased
+substantially.
 
-The Museum is actively supporting Project North Star and trying to
-facilitate our restoration work wherever possible and is promoting our
-work and future activities. Our Treasurer, Paul Labranche, and I
-recently met with the Museum Foundation. The Foundation is the umbrella
-organization with responsibility for fundraising and business
-development at the three museums, comprising the Museum Corporation,
-(Aviation, Science \& Tech and Agriculture). We had a very productive
-meeting, which among other things has resulted in the Foundation
-deciding to highlight Project North Star in its Fall fundraising mail
-out. This type of collaboration is very good for our Association and we
-hope as good for the Foundation.
+Apart from the occasions when our members either met or have the been actively
+taking part in Museum activities we have made a major step forward in that our
+Facebook page has again become active under the stewardship of Chris McGuffin.
+Chris is a dedicated Restoration Volunteer who can frequently be seen around
+the aircraft at a considerable height complete with hardhat and safety harness.
+When he returns to the ground, he often gets out his camera and takes
+photographs, many of which are now appearing on Facebook. For those of our
+readers who are not Facebook subscribers, I encourage you to join Facebook and
+to "like" the page Project North Star. You will then see the latest updates on
+our restoration progress together with the recent photographs.
 
-Our biggest challenge at present is to get our website properly
-operational again. A couple of our volunteers with website knowledge
-have indicated a willingness to do the necessary work and we are hoping
-to have the site working and up to date in the near future.
+Within the next few days our webmaster, Drew Hodge, will be relaunching our
+website with an updated homepage and better links to other parts of the
+website. Much work has gone into the redesign and we look forward to receiving
+comments from users. The website is designed primarily to be a location for all
+the Association's historical and archival information. We are planning to add
+to the website more PDF versions of previous issues of the NStar Chronicle and
+photographs which are not currently available on the site. Current information
+will be sent to members by email and updates to our Facebook page.
 
-On December 2nd we held a Members' meeting at the Museum when we were
-fortunate to have Jim Mason join us to talk about the restoration of an
-early Lockheed aircraft flown by TCA. The meeting was well attended in
-a new venue of the Avro Arrow room instead of the Bush Theatre.
-Following Jim's interesting presentation, the group moved to the
-Museum's Restoration Hangar where Rej talked about the progress of the
-North Star restoration and the plans for work in 2018.
+Our first big event of 2019 will be held at the Museum on Saturday, January
+19th to celebrate the 70th anniversary of the first non-stop flight across
+Canada between Vancouver and Halifax. The flight was made by a North Star on
+15th January 1949. Members have already been advised of the event by email and
+on Facebook and I hope to see many of you joining us on that day. Although this
+is a Project North Star Association event, we have received considerable help
+with planning from the staff of the Museum. This is a good example of the
+co-operative working relationship between the Association and Museum.
 
-One of the initiatives currently underway is to create a visual
-timeline of the work already completed on the North Star restoration
-and the planned future work to bring the project to completion. It is
-anticipated that this visual timeline will be mounted on a display
-board for our members and the public to view.
+During the summer we expect to show off the aircraft to the public, as usual,
+on Canada Day. We will also be showing the North Star during Doors Open Ottawa
+at the beginning of June, if the Museum decides to take part in the event this
+year.
 
-In closing, I am optimistic that 2018 will see increased activity both
-in the aircraft restoration work and also within our Association.
+During 2018 the Museum organised two very enjoyable events for volunteers.
+Invitations were given all Museum registered volunteers including North Star
+volunteers. In the summer we once again had a Bush Pilots' Breakfast at which
+the Museum staff cook a great breakfast for everyone attending (there is
+nothing so good as seeing the Director General, Chris Kitzan flipping
+pancakes). Shortly before Christmas the Museum organised a new event, a pot
+luck lunch for staff and all the Museum volunteers---another thoroughly good
+overeating occasion.
+
+One of the benefits of becoming an active member of PNSAC is for the
+comradeship with other members who all have an interest in aviation. It is not
+necessary to be a volunteer to enjoy the company of other members. Once a month
+there is an informal breakfast held in a caf\'{e} on Arch St which is relatively
+near the Ottawa General Hospital. The breakfast started about two years ago
+under the leadership of Bill Tate. Each month we chat about aviation, the North
+Star project and whatever else we feel like talking about. I usually give the
+group an update on anything of interest that has happened since the last
+breakfast. Joining this informal group is a good way to become involved with
+the Association and to possibly move on to taking a more active role in the
+Association.
+
+We will be holding our Annual General Meeting at the Museum on Saturday, April
+13. At this meeting we re-elect our Board of Directors and would welcome the
+nomination of any member who might be interested in serving on our Board. At
+present we have five members. This leaves one vacancy to bring us up to our
+normal Board number of six members.
+
+2019 is starting well. We look forward further significant milestones in the
+North Star restoration process such as rehanging of the restored Engine \#4. We
+are also hoping to arrange further events for our Association members.
+
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
