--- a/pnsac/newsletter/article_Special.tex
+++ b/pnsac/newsletter/article_Special.tex
@@ -4,53 +4,68 @@
 
 % Head
 
-\title{PNSAC Merchandise}
-%% \author{Drew Hodge}
+\title{70th Anniversary of first Canadian Non-stop Transcontinental Flight
+}
+\author{Roger Button}
 
 \maketitle
 
 %\end{multicols}
 
+"If some countries have too much history, we have too much geography" said
+former Prime Minister William Lyon Mackenzie King, to the House of Commons in
+1936. He would not have known at the time that some thirteen years later an
+aviation event would take place that would help to shrink this geography.
+
+January 15, 1949 was a noticeable day in the history of Canadian aviation. On
+that day the first non-stop transcontinental flight was made. The aircraft was
+Royal Canadian Air Force North Star, registration number 17512. It was operated
+by 426 Thunderbird Squadron which was stationed at Dorval, QC. The aircraft was
+captained by F/O J.A.F. Jolicoeur and crewed by 14 members of the Experimental
+and Proving Establishment from RCAF Rockcliffe.
+
 \begin{figure}[ht!]
    \vspace{2em}
    \centering
    %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=1.0]{fleece_YOW7578.eps}
+   \includegraphics[scale=0.5]{nstar-212-scaled.png}
    %caption of the figure 
-   \caption*{\small \em PNSAC winter apparel}
+   \caption*{\small \em North Star 17512}
    %label of the figure, which has to correspond to \ref{}:
-   \label{fig:merchandise}
+   \label{fig:nstar-17515}
 \end{figure}
 
+While 17512 was relatively new to the RCAF it had been one of the earliest
+aircraft to roll off the Canadair Assembly line at Cartierville, QC in 1946.
+However, instead of going directly into service with the RCAF it, along with
+six other aircraft were loaned to Trans Canada Airlines (later to become Air
+Canada). It was was not until 1948 that the aircraft was taken on strength by
+426 Squadron.
+
+The aircraft had a maximum range of 3,060 miles. This allowed 17512 to make the
+non-stop flight from Vancouver to Halifax a distance of 2,785 miles. The flight
+took eight hours and thirty two minutes. A year later the aircraft bested its
+time by making the same journey in eight hours and twenty five minutes.
+
+While the flight was an aviation first, it was also another step in the history
+of transcontinental travel in Canada. This started with arrival of the famous
+Scottish explorer Sir Alexander Mckenzie at the Pacific Ocean on July 22, 1793.
+He became the first European to cross North America north of Mexico. It was
+nearly one hundred years later that the next major leap in transcontinental
+travel took place with the completion of the Canadian Pacific Railway when the
+last spike was driven on November 7, 1885 at Eagle Pass, BC. In October 1920
+the Canadian Air Board staged a cross country mail demonstration but this
+involved a relay of five aircraft and a total flying time of 49 hours from
+Halifax to Vancouver. In 1939 Trans Canada Airlines flew the first commercial
+transcontinental flight from Toronto to Vancouver in 16 hours with four stops.
+The airline, however, didn't launch a non-stop transcontinental flight between
+the same airports until June 1, 1957. The flight also took eight hours and
+thirty two minutes using a Super Constellation. This was same time, to the
+minute, that the North Star took eight years earlier and on a longer route.
 
 
-The first frost warnings on the Weather Channel are reminders that
-fall and winter are just around the corner. Keep warm on those frosty
-fall days with a PNSAC toque and sweatshirt. We can also take
-individual orders for the micro fleece vests shown in the photo on the
-left, and if you're looking for early Christmas presents, how about a
-coffee mug or a t-shirt?
 
-See our Facebook page,
-{\normalfont\color{blue}\texttt{\href{https://www.facebook.com/media/set/?set=a.610706705637878.1073741851.284829008225651&type=1}{PNSAC
-      Merchandise}}}, for details about what we're offering, and place your
-orders by sending an email message to the following address
-\email{pnsac.merchandise@gmail.com}.
 
-For members in the Ottawa-Gatineau region, you can arrange to pick up
-your merchandise at the Canada Aviation and Space Museum any Monday or
-Tuesday, between 10:00 AM and 3:00 PM. We can also ship your purchases
-to you for an extra fee. Please specify museum pickup or shipping with
-your order.
-
-Merchandise is also available during our Quarterly Meetings
-at CASM.
-
-Look forward to hearing from you.
-
-``The Merchandise Committee''
-
- 
 
 
 
