--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -49,10 +49,13 @@
 
 \begin{document}
 
-\volume{14} % \volnumber{1}
+\volume{15} % \volnumber{1}
 \issue{1}
-\date{January 2018} 
+\date{January 2019} 
 \titlepage
+
+\centerline {\Large \textit {Celebrating the 70th Anniversary of the First
+Canadian Non-Stop Transcontinental Flight}}
 
 % Editor's notes
 % ..................................................... %
@@ -64,12 +67,14 @@
 
 \pagebreak
 
-% GDG CASM report .................................................... %
+% 70th anniversary report .................................................... %
 
 % Report
-%\begin{article}
-%	\input{article_MessageDGCASM} 
-%\end{article}
+\begin{article}
+	\input{article_Special} 
+\end{article}
+
+\pagebreak
 
 % President's report ................................................. %
 
@@ -103,9 +108,9 @@
 
 % Feature article
 
-%\begin{article}
-%	\input{article_Feature1} 
-%\end{article}
+\begin{article}
+	\input{article_Feature1} 
+\end{article}
 
 %\pagebreak
 
@@ -139,7 +144,7 @@
 % 	\input{article_RecentEvents}
 % \end{article}
 
-%\pagebreak
+\pagebreak
 
 % Special article 
 %\begin{article}
@@ -147,9 +152,9 @@
 %\end{article}
 
 % Miscellany article 
-% \begin{article}
-% 	\input{article_Miscellany} 
-% \end{article}
+ \begin{article}
+ 	\input{article_Miscellany} 
+ \end{article}
 
 %\pagebreak
 
