--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -16,24 +16,50 @@
 
 \vspace{12pt}
 
-Our Association was incorporated in 2003. We are fortunate that a
-number of the original members of the organization, such as Tim
-Timmins, are still involved as they can provide an historical
-perspective. As Tim says, in the article "Our Members," there have been
-many bumps in the road, and the fact that the aircraft is still a long
-way from completion after 16 years speaks for itself. In January 2017,
-R\'{e}jean (Rej) Demers took up his position as CASM's Conservation Project
-Manager. Rej's first contribution to the Chronicle can be found in the
-"Conservator's Corner." The restoration of the North Star is a priority
-for Rej. He has spent the first year of his mandate gathering
-information and developing systems and procedures which will, in the
-long run, move the restoration of the aircraft forward in a coherent
-manner. I have previously stated the obvious and that is the health and
-vigour of the Association is dependent on the restoration status of the
-aircraft. In the last few years there have been as many bumps in the
-road as there are potholes in Ottawa in the spring. The President is
-very optimistic we have reached a real turning point (see the
-"President's Notes") and wouldn't that be great.
+In this issue we are recognizing the 70th anniversary of a very special event
+in Canadian aviation history and one which involved a North Star aircraft. The
+first non-stop transcontinental flight took place on January 15, 1949 and
+readers will find an article dealing with that event in this issue. In
+addition, your Association, in partnership with the Canadian Aviation and Space
+Museum will be holding a members meeting, and a public viewing of the North
+Star on January 19, 2019 to mark this event.
+
+We are also recognizing another one of our long standing members in this
+issue. Ted Devey has been active in our organization since the very early
+days. We are indeed fortunate that we have a number of other members who have
+been with us since the beginning. In 2003 the Ottawa Citizen predicted "a
+bright future" for our nascent organization. A copy of the Citizen article is
+included in this issue. Not surprisingly, given the challenges involved in
+making this project work, the "future" did not always appear as "bright" as
+Polaris. However, our ever optimistic President reports that 2018 was
+characterized by positive developments in the Project, and our Association's
+relationship with CASM.
+
+The Museum's conservator, in the "Conservator's Corner" has contributed a
+thoughtful article based on the classic 70's book, \textit{Zen and the Art of
+Motorcycle Maintenance} which I am sure
+that our readers will enjoy. Good
+reading.
+
+
+%Our Association was incorporated in 2003. We are fortunate that a
+%number of the original members of the organization, such as Tim
+%Timmins, are still involved as they can provide an historical
+%perspective. As Tim says, in the article "Our Members," there have been
+%many bumps in the road, and the fact that the aircraft is still a long
+%way from completion after 16 years speaks for itself. In January 2017,
+%R\'{e}jean (Rej) Demers took up his position as CASM's Conservation Project
+%Manager. Rej's first contribution to the Chronicle can be found in the
+%"Conservator's Corner." The restoration of the North Star is a priority
+%for Rej. He has spent the first year of his mandate gathering
+%information and developing systems and procedures which will, in the
+%long run, move the restoration of the aircraft forward in a coherent
+%manner. I have previously stated the obvious and that is the health and
+%vigour of the Association is dependent on the restoration status of the
+%aircraft. In the last few years there have been as many bumps in the
+%road as there are potholes in Ottawa in the spring. The President is
+%very optimistic we have reached a real turning point (see the
+%"President's Notes") and wouldn't that be great.
 
 \vspace{12pt}
 
