--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -13,47 +13,19 @@
 %June 5, 2014     \hspace{50mm}\= Board of Directors' Meeting\\
 %{\normalfont\color{red}May 02, 2015}   \hspace{50mm}\= 
 %{\normalfont\color{red}Members' Quarterly Meeting}\\
-\textbf{Thursday, April 12, 2018}   \hspace{48mm}\=  Board of Directors Meeting\\ 
+\textbf{Saturday, January 19, 2019}   \hspace{48mm}\=  Members Meeting \& 70th
+anniversary events\\
 %  Add blank line
  \> \\
-\textbf{Saturday, April 14, 2018}   \hspace{48mm}\=  Annual General Meeting\\ 
+\textbf{Saturday, April 13, 2019}   \hspace{52mm}\=  Annual General Meeting\\ 
  \> \\
-\textbf{Sunday, July 01, 2018}   \hspace{53mm}\=  Canada Day\\ 
+\textbf{Sunday, June 1, 2, 2019}   \hspace{54mm}\=  Doors Open Ottawa
+(Tentative Event)\\ 
+ \> \\
+\textbf{Monday, July 1, 2019}   \hspace{58mm}\=  Canada Day\\ 
 %\textbf{Saturday, May 6, 2017}   \hspace{50mm}\=  \\ 
 \end{tabbing}
 %\vspace{-5mm}
-%PNSAC Speaker Series. Once again, PNS is hosting a lecture at the Canada Aviation \&
-%Space Museum given by Jim Mason. The event will include a brief history of the
-%TCA Lockheed 10A service, followed by the history of the restored Lockheed
-%CF-TCC, it's early restoration and events, as well as participation leading up to
-%Air Canada's 70th Anniversary.
-%
-%\begin{tabbing}
-%\textbf{Tuesday, May 23, 2017}   \hspace{52mm}\=  Volunteer Appreciation Dinner\\ 
-%%  Add blank line
-% \> \\
-%\textbf{Saturday and Sunday, June 3 \& 4, 2017}  \hspace{25mm}\= \\ 
-%\end{tabbing}
-%\vspace{-5mm}
-%PNS volunteers will display the North Star during the Open Doors Ottawa event.
-%
-%\begin{tabbing}
-%
-%\textbf{Saturday, July 01, 2017}   \hspace{50mm}\=  \\ 
-%\end{tabbing}
-%\vspace{-5mm}
-%Canada Day. PNS volunteers will, as usual, take part in the Canada Day celebrations and display the North Star to the public
-
-
-%July 01, 2016  \> Canada Day\\
-%September 15, 2016   \> Board of Directors' Meeting\\
-%September 24, 2016 \> Annual General Meeting
-
-
-
-%\noindent \textbf{Note}: The next Quarterly meeting will be held in the boardroom of
-%{\normalfont\color{blue}\texttt{\href{https://http://www.vintagewings.ca/}{Vintage
-%      Wings of Canada }}} at 10:00 AM on April 12, 2014.  A hangar tour will follow the meeting. 
 
 \begin{multicols}{2}
 
